# hahm-ebay-lister

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
app/: EbayConnect.tsx  ListingCard.tsx  ListingsView.tsx  ManageListings.tsx  ModelSelector.tsx  ReviewBoard.tsx  globals.css  page.tsx
app/api/analyze/: route.ts
app/api/ebay/auth/: route.ts
app/api/ebay/callback/: route.ts
app/api/ebay/disconnect/: route.ts
app/api/ebay/next-sku/: route.ts
app/api/ebay/publish/: route.ts
app/api/ebay/status/: route.ts
app/api/health/: route.ts
app/api/merge-check/: route.ts
app/api/sort/: route.ts
app/privacy/: page.tsx
lib/: api-guard.ts  categories.ts  concurrency.ts  export.ts  images.ts  model-preferences.ts  omniroute.ts  openrouter.ts  prompts.ts  providers.ts  resize.ts  sku.ts  sortPipeline.ts  types.ts  vinted.ts
lib/ebay/: aspectFill.ts  aspects.ts  classicListing.ts  config.ts  pricing.ts  publish.ts  refresh.ts  sellerListings.ts  session.ts  taxonomy.ts  tradingXml.ts
scramble-sdl2/: .gitignore  CMakeLists.txt  README.md
scramble-sdl2/src/: audio.c  audio.h  bullets.c  bullets.h  collision.c  collision.h  enemies.c  enemies.h  game.c  landscape.c  landscape.h  main.c  player.c  player.h  render.c  render.h  scramble.h  text.c  text.h
scramble-sdl2/src/data/: landscape_data.h
scripts/: measure-cache.ts  refresh-category-map.ts
server/: api.ts  index.ts
src/: main.tsx
